Updated index.html file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <link id="theme-style" rel="stylesheet" type="text/css" href="">
     </head>
     <body>
+        <section>
+            <div>
+                <h1>Hi, I'm Tomiwa Adedokun</h1>
+                <p>This is my Portfolio site</p>
+                <a href="a">Link</a>
+            </div>
+        </section>
 
     </body>
 </html>
