--- a/HTML REFRESHER/spiffy.html
+++ b/HTML REFRESHER/spiffy.html
@@ -2,6 +2,6 @@
     Spiffy Web Page
 </h1>
 <p>
-    Of course this is a trial because this isn't my first time using HTML tags
+    Of course this is a trial because this isn't my first time using <strong>HTML tags</strong>
     Thank you for viewing!
 </p>
