--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -1,1 +1,13 @@
-My HTML Notess
+My HTML Notes <br>
+
+<p>
+    The <em></em> tag is an emphasis tag.<br> It is used to emphasize elements with the tags in them
+    There are opening and closing tags between the elements as they occur. <br>
+</p>
+
+
+<p>
+    Usage: <em>Hi there!</em> <br>
+    Example: <br>
+    This is a <em>trial</em> message.
+</p>
