--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -1,13 +1,14 @@
-My HTML Notes <br>
+<strong>My HTML Notes </strong> <br>
 
 <p>
     The <em></em> tag is an emphasis tag.<br> It is used to emphasize elements with the tags in them
-    There are opening and closing tags between the elements as they occur. <br>
+    There are <mark>opening</mark> and <mark>closing</mark> tags between the elements as they occur. <br>
 </p>
 
 
 <p>
     Usage: <em>Hi there!</em> <br>
     Example: <br>
-    This is a <em>trial</em> message.
+    This is a <em>trial</em> message. <br>
+    Now using the <sup>Upper</sup> bound and <sub>lower</sub> bound tags
 </p>
