Modified notes.html with <h> tags

--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -1,4 +1,17 @@
-<strong>My HTML Notes </strong> <br>
+<h1><strong>My HTML Notes </strong> <br></h1>
+<p>
+    This page is a collection of my awesome notes about HTML!
+</p>
+
+<h2>The Web</h2>
+<p>
+    The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).
+</p>
+
+<h2>What is HTML?</h2>
+<p>
+    HTML stands for <em>Hypertext Markup Language.</em> It's used to define the structure or layout of a web page.
+</p>
 
 <p>
     The <em></em> tag is an emphasis tag.<br> It is used to emphasize elements with the tags in them
