--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -25,3 +25,28 @@
     This is a <em>trial</em> message. <br>
     Now using the <sup>Upper</sup> bound and <sub>lower</sub> bound tags
 </p>
+
+<h3>My chemistry notes</h3>
+<p>
+  <strong>Molecule name</strong>: Sulfur hexafluoride
+</p>
+<p>
+  <strong>Molecular formula</strong>: C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>
+</p>
+<p>
+  <strong>Note</strong>: This gas has a much higher density than air. Basically the opposite of helium. <mark>Crazy!</mark>
+</p>
+
+<h4>List of updates info</h4>
+<p>
+    <ol>
+        <li>Paragrapghs</li>
+        <li>Block and Inline elements</li>
+        <ul>
+            <li>em tag > Inline
+            <li>br tag > Inline
+            <li>p tag > Block
+        </ul>
+        <li>sup and sub</li>
+    </ol>
+</p>
