Updated with image additions

--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -50,3 +50,40 @@
         <li>sup and sub</li>
     </ol>
 </p>
+
+<h4>Some animal classes</h4>
+<ul>
+    <li>Mammals
+      <ol>
+        <li>Raccoons
+        <li>Gorillas
+      </ol>
+    <li>Reptiles
+      <ol>
+        <li>Iguanas
+        <li>Cobras
+      </ol>
+    <li>Birds
+      <ol>
+        <li>Ostrictes
+        <li>Ravens
+      </ol>
+  </ul>
+
+  <h4>Connect with me!</h4>
+<p>
+    Connect with me on GitHub <br>
+    <a href="https://github.com/Extomvi"><img src="github.png" alt="GitHub"></a>
+</p>
+
+<h4>Other uses of the Image Tag with Pictures of a Bear and a Cat</h4>
+<p>
+    My favorite things:
+</p>
+  <ol>
+    <li><a href ="https://placebear.com/150/150" target="_blank">Bears</a>
+    <li><a href ="https://placekitten.com/150/150" target="_blank">Kittens</a>
+  </ol>
+  <img src="https://placebear.com/150/150" alt="A picture of a bear.">
+  <img src="https://placekitten.com/150/150" alt="A picture of a kitten.">
+        
