Included the <!DOCTYPE html> at the top

--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -1,4 +1,7 @@
-<h1><strong>My HTML Notes </strong> <br></h1>
+<!DOCTYPE html>
+<h1>
+    <strong>My HTML Notes </strong> <br>
+</h1>
 <p>
     This page is a collection of my awesome notes about HTML!
 </p>
