Added author tag

--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="eng">
     <head>
         <title>
             My HTML Notes
@@ -98,7 +98,9 @@
           <img src="https://placekitten.com/150/150" alt="A picture of a kitten.">
 
     </body>
-    
-            
-  
+ 
 </html>
+<author>
+    Tomiwa Adedokun<br>
+    Email: exceltadedokun@gmail.com
+</author>
