Updates based on validator results

--- a/HTML REFRESHER/notes.html
+++ b/HTML REFRESHER/notes.html
@@ -50,8 +50,8 @@
         <h4>List of updates info</h4>
         <p>
             <ol>
-                <li>Paragrapghs</li>
-                <li>Block and Inline elements</li>
+                <li>Paragrapghs
+                <li>Block and Inline elements
                 <ul>
                     <li>em tag > Inline
                     <li>br tag > Inline
@@ -95,12 +95,8 @@
             <li><a href ="https://placekitten.com/150/150" target="_blank">Kittens</a>
           </ol>
           <img src="https://placebear.com/150/150" alt="A picture of a bear.">
-          <img src="https://placekitten.com/150/150" alt="A picture of a kitten.">
+          <img src="https://placekitten.com/150/150" alt="A picture of a kitten."><br><br><br>
 
     </body>
  
 </html>
-<author>
-    Tomiwa Adedokun<br>
-    Email: exceltadedokun@gmail.com
-</author>
