Added style.css and updated index.html file

--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tomiwa's Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+<head>
+    <title>Tomiwa Portfolio</title>
+    <meta charset="utf-8"
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-        <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
 
-        <link rel="stylesheet" type="text/css" href="default.css">
-        <link id="theme-style" rel="stylesheet" type="text/css" href="">
-    </head>
-    <body>
-        <section>
-            <div>
-                <h1>Hi, I'm Tomiwa Adedokun</h1>
-                <p>This is my Portfolio site</p>
-                <a href="a">Link</a>
-            </div>
-        </section>
-
-    </body>
+</body>
 </html>
