Added js & image folders

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
 </head>
 <body>
 
+    <!-- Header -->
+    <header>
+        <a href="#" class="logo"><img src=""</a>
+    </header>
+
+    <!-- Joining js script -->
+    <script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
