Updated style.css and added image files

--- a/index.html
+++ b/index.html
@@ -16,8 +16,39 @@
 
     <!-- Header -->
     <header>
-        <a href="#" class="logo"><img src=""</a>
+        <a href="#" class="logo"><img src="img/logo.jpg"</a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navlist">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <a href="#" class="top-btn">Download Resume</a>
     </header>
+
+    <!-- Home -->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h3>Hello, I'm</h3>
+            <h1>Tomiwa Adedokun</h1>
+            <h5>A Software Engineer <span>From Lagos, Nigeria</span></h5>
+            <p>I'm a developer with skills in general software development, cloud operations <br> and also very passionate about the tech community.</p>
+            <div class="social">
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="#"><i class='bx bxl-stack-overflow' ></i></a>
+                <a href="#"><i class='bx bxs-envelope' ></i></a>
+            </div>
+            <a href="#" class="btn">About Me</a>
+        </div>
+
+        <div class="home-img">
+            <img src="img/main.png">
+        </div>
+
+    </section>
 
     <!-- Joining js script -->
     <script type="text/javascript" src="js/script.js"></script>
