--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tomiwa Portfolio</title>
-    <meta charset="utf-8"
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -47,6 +47,11 @@
         <div class="home-img">
             <img src="img/main.png">
         </div>
+
+    </section>
+
+    <!-- Other sections -->
+    <section class="other-sections">
 
     </section>
 
