Added Javascript file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header>
-        <a href="#" class="logo"><img src="img/logo.jpg"</a>
+        <a href="#" class="logo"><img src="img/logo.jpg"></a>
         <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navlist">
@@ -54,6 +54,22 @@
     <section class="other-sections">
 
     </section>
+
+</section>
+
+<!-- About -->
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="img/about.jpg">
+    </div>
+
+    <div class="about-text">
+        <h3>I'm a Software Engineer</h3>
+        <h2>I can build software systems</h2>
+        <p>Backend experience in various Software architectures, Cloud and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
+        <a href="#" class="btn">Hire Me</a>
+    </div>
+</section>
 
     <!-- Joining js script -->
     <script type="text/javascript" src="js/script.js"></script>
