Updated index.html and style.css files

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
     </div>
 </section>
 
+    <!--------ends---->
+	<div class="ends">
+		<p>Made with love by Tomiwa Adedokun © 2022</p>
+	</div>
+
+	<script src="https://unpkg.com/scrollreveal"></script>
+    
     <!-- Joining js script -->
     <script type="text/javascript" src="js/script.js"></script>
 
