--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
     <!--------ends---->
 	<div class="ends">
-		<p>Made with love by Tomiwa Adedokun © 2022</p>
+		<p>Tomiwa Adedokun © 2022</p>
 	</div>
 
 	<script src="https://unpkg.com/scrollreveal"></script>
-    
+
     <!-- Joining js script -->
     <script type="text/javascript" src="js/script.js"></script>
 
