--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
     </div>
 </section>
 
+    <!--------portfolio---->
+	<section class="portfolio" id="portfolio">
+		<div class="heading">
+			<h3>Portfolio</h3>
+			<h2>My Experience</h2>
+			<p>Most common methods for designing websites that work well on desktop is <br> responsive and adaptive design</p>
+		</div>
+
     <!--------ends---->
 	<div class="ends">
 		<p>Tomiwa Adedokun © 2022</p>
