Updates for portfolio class - "experience"

--- a/index.html
+++ b/index.html
@@ -55,29 +55,30 @@
 
     </section>
 
-</section>
 
-<!-- About -->
-<section class="about" id="about">
-    <div class="about-img">
-        <img src="img/about.jpg">
-    </div>
+    <!-- About -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.jpg">
+        </div>
 
-    <div class="about-text">
-        <h3>I'm a Software Engineer</h3>
-        <h2>I can build software systems</h2>
-        <p>Backend experience in various Software architectures, Cloud and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
-        <a href="#" class="btn">Hire Me</a>
-    </div>
-</section>
+        <div class="about-text">
+            <h3>I'm a Software Engineer</h3>
+            <h2>I can build software systems</h2>
+            <p>Backend experience in various Software architectures, Cloud and DevOps engineer with an additional skillset in Machine learning and Artificial intelligence.</p>
+            <a href="#" class="btn">Hire Me</a>
+        </div>
+    </section>
 
     <!--------portfolio---->
 	<section class="portfolio" id="portfolio">
 		<div class="heading">
 			<h3>Portfolio</h3>
 			<h2>My Experience</h2>
-			<p>Most common methods for designing websites that work well on desktop is <br> responsive and adaptive design</p>
+			<p>Most common methods for software engineering best practices <br> that aligns with AGILE software and DevOps practices</p>
 		</div>
+
+    </section>
 
     <!--------ends---->
 	<div class="ends">
