--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="#" class="top-btn">Download Resume</a>
+        <a href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">Download Resume</a> <!--Inserted link to my resume(Google Docs site)-->
     </header>
 
     <!-- Home -->
