Updated the github button to include redirect link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>I'm a developer with skills in general software development, cloud operations <br> and also very passionate about the tech community.</p>
             <div class="social">
                 <a href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
-                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
                 <a href="#"><i class='bx bxl-stack-overflow' ></i></a>
                 <a href="#"><i class='bx bxs-envelope' ></i></a>
             </div>
