Updated stackoverflow button to redirect to the profile site

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="social">
                 <a href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
                 <a href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
-                <a href="#"><i class='bx bxl-stack-overflow' ></i></a>
+                <a href="https://stackoverflow.com/users/11926517/tomiwa"><i class='bx bxl-stack-overflow' ></i></a>    <!--Stackoverflow Profile-->
                 <a href="#"><i class='bx bxs-envelope' ></i></a>
             </div>
             <a href="#" class="btn">About Me</a>
