--- a/index.html
+++ b/index.html
@@ -77,6 +77,26 @@
 			<h2>My Experience</h2>
 			<p>Most common methods for software engineering best practices <br> that aligns with AGILE software and DevOps practices</p>
 		</div>
+        <div class="timeline" id="experience-timeline">
+
+            <div class="item">
+                
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="#">
+                            <u>Tek Experts</u>
+                            <small>Cloud Support Engineer</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        "Lagos, Nigeria"
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
