Working on the portfolio div section

--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
 
                     <div class="location">
                         <i class='bx bx-location-plus'></i>
-                        "Lagos, Nigeria"
+                        Lagos, Nigeria
                     </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Cloud Support Engineer</div>
+                    <div class="time">April. 2022 - Present</div>
                 </div>
             </div>
         </div>
