Added email address

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
                 <a href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
                 <a href="https://stackoverflow.com/users/11926517/tomiwa"><i class='bx bxl-stack-overflow' ></i></a>    <!--Stackoverflow Profile-->
-                <a href="mailto:exceltadedokun@gmail.com"><i class='bx bxs-envelope' ></i></a>
+                <a href="mailto:exceltadedokun@gmail.com"><i class='bx bxs-envelope' ></i></a>                          <!--Email address-->
             </div>
             <a href="#" class="btn">About Me</a>
         </div>
