Updated code to include list of experience

--- a/index.html
+++ b/index.html
@@ -101,6 +101,42 @@
                     <div class="title">Cloud Support Engineer</div>
                     <div class="time">April. 2022 - Present</div>
                 </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            Azure · Azure DevOps · Azure Kubernetes Service (AKS) · Azure Kusto · Web Applications · Azure API Management · Azure Functions · Azure Virtual Machines · Azure Logic Apps
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            Troubleshooting web apps using App lens
+                        </li>
+                        <br>
+                        <li>
+                            Microsoft Azure cloud support for App Services and its operations which includes but not limited to Web apps and Azure Functions.
+                        </li>
+                        <br>
+                        <li>
+                            Optimizing cloud applications through the application of the efficient cloud tools that are deployed using different programming languages.                        
+                        </li>
+                        <br>
+                        <li>
+                            Ensuring effective communication which brings about great customer satisfaction by being accountable, resourceful and showing empathy.                        
+                        </li>
+                        <br>
+                        <li>
+                            App service performance and configuration with reference to:
+                            <p>Web Apps · Mobile Apps · Function Apps · Logic Apps · Web App for Containers · Web App on Linux · API Apps · App Service Domain · App Service Certificates · Static Web Apps · Start-Stop VMs                        
+                        </li>
+                        <br>
+
+                    </ul>
+                </div>
             </div>
         </div>
 
