Made the redirects open on a new page "_blank"

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">Download Resume</a> <!--Inserted link to my resume(Google Docs site)-->
+        <a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">Download Resume</a> <!--Inserted link to my resume(Google Docs site)-->
     </header>
 
     <!-- Home -->
@@ -36,10 +36,10 @@
             <h5>A Software Engineer <span>From Lagos, Nigeria</span></h5>
             <p>I'm a developer with skills in general software development, cloud operations <br> and also very passionate about the tech community.</p>
             <div class="social">
-                <a href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
-                <a href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
-                <a href="https://stackoverflow.com/users/11926517/tomiwa"><i class='bx bxl-stack-overflow' ></i></a>    <!--Stackoverflow Profile-->
-                <a href="mailto:exceltadedokun@gmail.com"><i class='bx bxs-envelope' ></i></a>                          <!--Email address-->
+                <a target="_blank" href="https://www.linkedin.com/in/tomiwa-adedokun-excellence/"><i class='bx bxl-linkedin'></i></a> <!--Linkedin Profile-->
+                <a target="_blank" href="https://github.com/Extomvi"><i class='bx bxl-github' ></i></a>         <!--GitHub Profile-->
+                <a target="_blank" href="https://stackoverflow.com/users/11926517/tomiwa"><i class='bx bxl-stack-overflow' ></i></a>    <!--Stackoverflow Profile-->
+                <a target="_blank" href="mailto:exceltadedokun@gmail.com"><i class='bx bxs-envelope' ></i></a>                          <!--Email address-->
             </div>
             <a href="#" class="btn">About Me</a>
         </div>
@@ -84,9 +84,9 @@
                 <div class="workplace">
                     <h3 class="place">
                         <i class='bx bx-link-alt'></i>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.tek-experts.com/">
                             <u>Tek Experts</u>
-                            <small>Cloud Support Engineer</small>
+                            <small>Technical Support Engineer</small>
                         </a>
                     </h3>
 
@@ -133,7 +133,7 @@
                             App service performance and configuration with reference to:
                             <p>Web Apps · Mobile Apps · Function Apps · Logic Apps · Web App for Containers · Web App on Linux · API Apps · App Service Domain · App Service Certificates · Static Web Apps · Start-Stop VMs                        
                         </li>
-                        <br>
+                        <p></p>
 
                     </ul>
                 </div>
