Updated the Lyvo experience

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <i class='bx bx-link-alt'></i>
                         <a target="_blank" href="https://lyvo.org/">
                             <u>Lyvo</u>
-                            <small>Software Engineer Intern</small>
+                            <small>Software Engineering Intern</small>
                         </a>
                     </h3>
 
