Added 'Faacebook-Andela' experience to the portfolio

--- a/index.html
+++ b/index.html
@@ -253,6 +253,58 @@
                 </div>
             </div>
             <!--//Lyvo-->
+            <!--Facebook-Andela-->
+            <div class="item">
+    
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="https://buildforsdg.andela.com/">
+                            <u>Facebook-Andela SDG</u>
+                            <small>Backend Developer</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Lagos, Nigeria
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Backend Developer</div>
+                    <div class="time">March. 2020 - June. 2020</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            Python · Git · Javascript · HTML · CSS · GraphQL · Angular · Django
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            Collaborated with a team of six as a member to build a simple interactive platform that interacts in real time, and it was a CRUD application.                        
+                        </li>
+                        <br>
+                        <li>
+                            Incorporated Vue in the frontend of the application in place of the basic web development modules while applying HTML, CSS & Javascript.                        
+                        </li>
+                        <br>
+                        <li>
+                            Utilized Git as a collaborative tool for effective collaboration in the project.                        
+                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//Facebook-Andela-->
         </div>
 
     </section>
