Added Facebook-Andela role into the portfolio

--- a/index.html
+++ b/index.html
@@ -289,15 +289,18 @@
                             <br>
                         </p>
                         <li>
-                            Collaborated with a team of six as a member to build a simple interactive platform that interacts in real time, and it was a CRUD application.                        
-                        </li>
+                            Worked in a team of seven to develop a product amongst the SDG goals so as to help those in need and improve the lives of those in our community. <a target="_blank" href="https://drive.google.com/file/d/1qmuhEYLeRPkCV3-P1wD_ztPC163ov74v/view?usp=sharing">Certification</a>                        </li>
                         <br>
                         <li>
-                            Incorporated Vue in the frontend of the application in place of the basic web development modules while applying HTML, CSS & Javascript.                        
+                            Managed the backend development section alongside a fellow team member by using Facebook’s open-source tools and Django framework for the development of the application.                        
                         </li>
                         <br>
                         <li>
                             Utilized Git as a collaborative tool for effective collaboration in the project.                        
+                        </li>
+                        <br>
+                        <li>
+                            Incorporated Google, Facebook, and LinkedIn login features for easy access into the web application which is to be an accident tracking and reporting application to quickly aid accident reports to the relevant authorities.                        
                         </li>
                         <p></p>
 
