Updated responsibilities for Hugo and Andela experience

--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@
                         </li>
                         <br>
                         <li>
+                            Developed a GeoBias dataset for training AI models based on color and geographical differences.
+                        </li>
+                        <br>
+                        <li>
+                            Developing models for natural language processing(NLP).
+                        </li>
+                        <li>
                             Managed a team to ensure team members communicate effectively to bring about constant high team performance and productivity.                        
                         </li>
                         <br>
