--- a/index.html
+++ b/index.html
@@ -370,6 +370,57 @@
                 </div>
             </div>
             <!--//IBM-->
+            <!--DSN-->
+            <div class="item">
+    
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="#">
+                            <u>Data Science Nigeria</u>
+                            <small>AI Bootcamp</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Lagos, Nigeria
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Data Scientist</div>
+                    <div class="time">November. 2019 - December. 2019</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            Mainframe · C · Java · COBOL · REXX · Linux · IBM Z · z/VM · z/OS
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            Interacted with  the IBM Z mainframe and acquainted yourself with the user interfaces, the basic concepts, and data structures.                        
+                        <br>
+                        <li>
+                            Performed advanced commands, system setup, and system navigation), developed (C, JAVA, COBOL, assembler, and REXX) and experienced operating systems(including Linux, z/VM, z/OS, z/TPF) challenges on IBM Z.
+                        </li>
+                        <br>
+                        <li>
+                            Concluded the challenge with <a target="_blank" href="https://www.credly.com/badges/55da0dd1-27a4-4001-955c-8bbfd2c93e5a/linked_in_profile">Part 2</a> & <a target="_blank" href="https://www.credly.com/badges/38789704-4a2c-476f-9564-7248c917c3dd/linked_in_profile">Part 3</a> badges as the one of top 3 in Nigeria and top 10 in the EMEA region.                        
+                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//DSN-->
         </div>
 
     </section>
