Update DSN experience on the portfolio

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 <div class="workplace">
                     <h3 class="place">
                         <i class='bx bx-link-alt'></i>
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.datasciencenigeria.org/aibootcamp/">
                             <u>Data Science Nigeria</u>
                             <small>AI Bootcamp</small>
                         </a>
@@ -399,21 +399,28 @@
                         <p>
                             <b>Technologies:</b>
                             <br>
-                            Mainframe · C · Java · COBOL · REXX · Linux · IBM Z · z/VM · z/OS
+                            Python · Machine Learning · Pandas · Numpy · Regression · Jupyter 
                         </p>
                         <p>
                             <b>Responsibilities:</b>
                             <br>
                         </p>
                         <li>
-                            Interacted with  the IBM Z mainframe and acquainted yourself with the user interfaces, the basic concepts, and data structures.                        
-                        <br>
-                        <li>
-                            Performed advanced commands, system setup, and system navigation), developed (C, JAVA, COBOL, assembler, and REXX) and experienced operating systems(including Linux, z/VM, z/OS, z/TPF) challenges on IBM Z.
+                            Used machine learning and AI models to develop a Staff Promotion Algorithm for predicting the members of staff that are likely to be
+                            promoted based on defined personal and performance parameters/metrics(<a target="_blank" href="http://www.kaggle.com/c/intercampusai2019/overview">Overview</a>)                       
                         </li>
                         <br>
                         <li>
-                            Concluded the challenge with <a target="_blank" href="https://www.credly.com/badges/55da0dd1-27a4-4001-955c-8bbfd2c93e5a/linked_in_profile">Part 2</a> & <a target="_blank" href="https://www.credly.com/badges/38789704-4a2c-476f-9564-7248c917c3dd/linked_in_profile">Part 3</a> badges as the one of top 3 in Nigeria and top 10 in the EMEA region.                        
+                            Used python packages; numpy, panda,matplotlib & other data analysis interpreters for data science to analyze data sets and also visualize
+                            the data sets                        
+                        </li>
+                        <br>
+                        <li>
+                            Worked alongside the <b>University Team</b> in building models during the bootcamp, and we were awarded for our team effort<a target="_blank" href="https://unilag.edu.ng/?p=5677">Unilag wins AI School of the year award</a>
+                        </li>
+                        <br>
+                        <li>
+                            The model developed had an accuracy level of 96%.
                         </li>
                         <p></p>
 
