Added Oracle experience to the portfolio

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         <p>
                             <b>Technologies:</b>
                             <br>
-                            Python · Machine Learning · Pandas · Numpy · Regression · Jupyter 
+                            Python · Machine Learning · Pandas · Numpy · Regression · Jupyter · Kaggle
                         </p>
                         <p>
                             <b>Responsibilities:</b>
@@ -428,6 +428,57 @@
                 </div>
             </div>
             <!--//DSN-->
+            <!--Oracle-->
+            <div class="item">
+    
+                <div class="workplace">
+                    <h3 class="place">
+                        <i class='bx bx-link-alt'></i>
+                        <a target="_blank" href="https://www.datasciencenigeria.org/aibootcamp/">
+                            <u>Oracle</u>
+                            <small>Programming Bootcamp</small>
+                        </a>
+                    </h3>
+
+                    <div class="location">
+                        <i class='bx bx-location-plus'></i>
+                        Lagos, Nigeria
+                    </div>
+                </div>
+
+                <div class="job-meta">
+
+                    <div class="title">Java Developer</div>
+                    <div class="time">August. 2019 - September. 2019</div>
+                </div>
+
+                <div class="job-desc">
+                    <ul>
+                        <p>
+                            <b>Technologies:</b>
+                            <br>
+                            Java · Alice framework · Algorithms  
+                        </p>
+                        <p>
+                            <b>Responsibilities:</b>
+                            <br>
+                        </p>
+                        <li>
+                            ● Wrote highly maintainable and solid code in Java for a record management system that formed a code framework and has won a high scale of praise from developers since it was created.                      
+                        </li>
+                        <br>
+                        <li>
+                            ● Applied relevant knowledge of Java programming with the use of Alice 3.0 software to design and simulate a Desert environment for race cars alongside my team members.                        
+                        </li>
+                        <br>
+                        <li>
+                            ● Introduced to a brief background knowledge of Artificial Intelligence and Machine Learning.                        </li>
+                        <p></p>
+
+                    </ul>
+                </div>
+            </div>
+            <!--//Oracle-->
         </div>
 
     </section>
