Updated location for IBM experience

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
                     <div class="location">
                         <i class='bx bx-location-plus'></i>
-                        Lagos, Nigeria
+                        Remote.
                     </div>
                 </div>
 
