--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <a target="_blank" href="https://docs.google.com/document/d/1DVnmw0NpZLQSpLbkDlZPkigg5ZpNH3ZLgBdIMWcKRrk/edit?usp=sharing" class="top-btn">Download Resume</a> <!--Inserted link to my resume(Google Docs site)-->
