Added skills to the index.html and also updated the css

--- a/index.html
+++ b/index.html
@@ -485,6 +485,32 @@
 
     </section>
 
+    <section id="skills-section" class="skills-section selection text-center">
+
+        <h2 class="section-title">Professional Skills</h2>
+        <div class="top-skills">
+            <h3 class="subtitle">Top Skills</h3>
+            <div class="row">
+                <div class="item col-12 col-md-4">
+                    <div class="item-inner">
+                        <div class="chart-easy-pie text-center">
+                            <div class="chart-theme-1-chart" data-percent="80">
+                                <span>80</span>
+                                %
+                                <canvas height="110" width="110"></canvas>
+                            </div>
+                        </div>
+                        <h4 class="skill-name">Python</h4>
+                        <div class="level">4 years</div>
+                        <div class="desc"> </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
     <!--------ends---->
 	<div class="ends">
 		<p>Tomiwa Adedokun © 2022</p>
